// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basic Basic with no items 1`] = `
<div>
  <div
    className="container"
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      className="justify-content-center row"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <div
        className="col-sm-auto offset-sm-1"
      >
        <button
          className="btn btn-primary"
          onClick={[Function]}
          type="button"
        >
          Add element
        </button>
      </div>
      <div
        className="col-sm-auto offset-sm-1"
      >
        <button
          className="btn btn-danger"
          onClick={[Function]}
          type="button"
        >
          Reset
        </button>
      </div>
    </div>
    <div
      className="justify-content-center row"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <div>
        <div
          className="row"
        >
          <div
            className="col"
          >
            <input
              className="form-control"
              onChange={[Function]}
              placeholder="Qué desea buscar?"
              style={
                Object {
                  "width": 300,
                }
              }
              type="text"
              value=""
            />
          </div>
          <div
            className="col"
          >
            <button
              className="btn btn-secondary"
              onClick={[Function]}
              type="button"
            >
               
              <svg
                className={undefined}
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                />
              </svg>
               
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="justify-content-center row"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <ul
        className="list-group"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Basic Basic with one item 1`] = `
<div>
  <div
    className="container"
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      className="justify-content-center row"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <div
        className="col-sm-auto offset-sm-1"
      >
        <button
          className="btn btn-primary"
          onClick={[Function]}
          type="button"
        >
          Add element
        </button>
      </div>
      <div
        className="col-sm-auto offset-sm-1"
      >
        <button
          className="btn btn-danger"
          onClick={[Function]}
          type="button"
        >
          Reset
        </button>
      </div>
    </div>
    <div
      className="justify-content-center row"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <div>
        <div
          className="row"
        >
          <div
            className="col"
          >
            <input
              className="form-control"
              onChange={[Function]}
              placeholder="Qué desea buscar?"
              style={
                Object {
                  "width": 300,
                }
              }
              type="text"
              value=""
            />
          </div>
          <div
            className="col"
          >
            <button
              className="btn btn-secondary"
              onClick={[Function]}
              type="button"
            >
               
              <svg
                className={undefined}
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                />
              </svg>
               
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="justify-content-center row"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <ul
        className="list-group"
      >
        <li
          className="list-group-item"
        >
          Item 1
          <button
            className="btn btn-danger"
            onClick={[Function]}
            style={
              Object {
                "marginLeft": 10,
              }
            }
            type="button"
          >
            <svg
              className={undefined}
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M497.941 273.941c18.745-18.745 18.745-49.137 0-67.882l-160-160c-18.745-18.745-49.136-18.746-67.883 0l-256 256c-18.745 18.745-18.745 49.137 0 67.882l96 96A48.004 48.004 0 0 0 144 480h356c6.627 0 12-5.373 12-12v-40c0-6.627-5.373-12-12-12H355.883l142.058-142.059zm-302.627-62.627l137.373 137.373L265.373 416H150.628l-80-80 124.686-124.686z"
              />
            </svg>
          </button>
        </li>
        <li
          className="list-group-item"
        >
          Item 2
          <button
            className="btn btn-danger"
            onClick={[Function]}
            style={
              Object {
                "marginLeft": 10,
              }
            }
            type="button"
          >
            <svg
              className={undefined}
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M497.941 273.941c18.745-18.745 18.745-49.137 0-67.882l-160-160c-18.745-18.745-49.136-18.746-67.883 0l-256 256c-18.745 18.745-18.745 49.137 0 67.882l96 96A48.004 48.004 0 0 0 144 480h356c6.627 0 12-5.373 12-12v-40c0-6.627-5.373-12-12-12H355.883l142.058-142.059zm-302.627-62.627l137.373 137.373L265.373 416H150.628l-80-80 124.686-124.686z"
              />
            </svg>
          </button>
        </li>
        <li
          className="list-group-item"
        >
          Item 3
          <button
            className="btn btn-danger"
            onClick={[Function]}
            style={
              Object {
                "marginLeft": 10,
              }
            }
            type="button"
          >
            <svg
              className={undefined}
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M497.941 273.941c18.745-18.745 18.745-49.137 0-67.882l-160-160c-18.745-18.745-49.136-18.746-67.883 0l-256 256c-18.745 18.745-18.745 49.137 0 67.882l96 96A48.004 48.004 0 0 0 144 480h356c6.627 0 12-5.373 12-12v-40c0-6.627-5.373-12-12-12H355.883l142.058-142.059zm-302.627-62.627l137.373 137.373L265.373 416H150.628l-80-80 124.686-124.686z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots Full, live app It is running here 1`] = `
<div>
  <div
    className="container"
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      className="justify-content-center row"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <div
        className="col-sm-auto offset-sm-1"
      >
        <button
          className="btn btn-primary"
          onClick={[Function]}
          type="button"
        >
          Add element
        </button>
      </div>
      <div
        className="col-sm-auto offset-sm-1"
      >
        <button
          className="btn btn-danger"
          onClick={[Function]}
          type="button"
        >
          Reset
        </button>
      </div>
    </div>
    <div
      className="justify-content-center row"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <div>
        <div
          className="row"
        >
          <div
            className="col"
          >
            <input
              className="form-control"
              onChange={[Function]}
              placeholder="Qué desea buscar?"
              style={
                Object {
                  "width": 300,
                }
              }
              type="text"
              value=""
            />
          </div>
          <div
            className="col"
          >
            <button
              className="btn btn-secondary"
              onClick={[Function]}
              type="button"
            >
               
              <svg
                className={undefined}
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                />
              </svg>
               
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="justify-content-center row"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <ul
        className="list-group"
      />
    </div>
  </div>
</div>
`;
